# inline-blob

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
